--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -237,7 +237,6 @@ select {
 
 /* Globally style the close icon */
 .kiwi-close-icon {
-    background-color: #fc6262;
     color: #fff;
     border-radius: 0 0 0 4px;
     position: absolute;
@@ -245,10 +244,7 @@ select {
     top: 0;
     cursor: pointer;
     padding: 0.2em 0.4em;
-}
-
-.kiwi-close-icon:hover {
-    background-color: #fe7575;
+    transition: background 0.2s;
 }
 
 .kiwi-settings-advanced-table tr:hover {
