--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -10,6 +10,7 @@
     --brand-primary: #42b992;
     --brand-primary-hover: #5ec9a6;
     --brand-midtone: #f1f1f1;
+    --brand-darktone: #969696;
     --brand-bg-default: #fff;
     --brand-fg-default: #22231f;
 
@@ -106,7 +107,7 @@
 }
 
 .u-input-text-underline {
-    border-color: var(--brand-midtone);
+    border-color: var(--brand-darktone);
 }
 
 .u-input-text-underline-active {
@@ -151,6 +152,10 @@
 .u-button-primary {
     background-color: var(--brand-primary);
     color: var(--brand-bg-default);
+}
+
+.u-button-primary:hover {
+    background-color: var(--brand-primary-hover);
 }
 
 .u-button-secondary {
