- CHANGE: increase transiton of the messageUser icon by 0.1s - CHANGE: message user icon is now dark, not as dark as master, as thats too attention grabbing

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -333,7 +333,7 @@
 }
 
 .kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
-    color: var(--brand-primary);
+    color: var(--brand-darktone);
 }
 
 .kiwi-nicklist-user::after {
