CHANGE: tab bottom border colour is now midtone, rather than white

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -85,7 +85,7 @@
 }
 
 .u-tabbed-view-tabs .u-tabbed-view-tab {
-    border-bottom-color: var(--brand-bg-default);
+    border-bottom-color: var(--brand-midtone);
     background: var(--brand-bg-default);
 }
 
