--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -31,6 +31,7 @@
     --comp-statebrowser-channel-active-bg: #ffffff0d;
     --comp-statebrowser-channel-active-fg: #fff;
     --comp-usermenu-open-bg: #0e0e0e;
+    --comp-statebrowser-network-border: #656565;
 
 
     /* Sidebars ( Right Side ) */
