--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -99,6 +99,10 @@
     background-color: #967c68;
 }
 
+.kiwi-startup-common-section-info {
+    border-left-color: var(--brand-primary);
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
